k8s/prod/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: rs-service-prod
  labels:
    app: api
    environment: prod
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: api
    environment: prod
  sessionAffinity: None
